mathjax alignment fix.

--- a/themes/basic/assets/css/_responsive.scss
+++ b/themes/basic/assets/css/_responsive.scss
@@ -1,6 +1,6 @@
 
 
-@media (max-width: 1200px) {
+@media (max-width: 1275px) {
 
     body{
       padding: 0;
@@ -92,7 +92,6 @@
 
 .toc_container {
   width: 10rem;
-  overflow-y: auto;
   }
 }
 
