--- a/themes/basic/assets/css/webStyling.scss
+++ b/themes/basic/assets/css/webStyling.scss
@@ -36,20 +36,33 @@
     max-width: 800px;
 }
 
-@media (max-width: 450px) {
 
- .container{
-    display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-    margin: 0 auto;
-     margin-bottom: 0rem;
-     padding-left: 0rem;
+
+@media (max-width: 800px) {
+
+#tocButton, .tableContents{
+  height: 300px;
+}
 }
 
+/*prevent white dot from appearing at top*/
+.MJX_LiveRegion{
+  background-color: var(--navbar-color);
 }
 
+.MathJax {
+  color:var(--navbar-color);
+}
+
+
+  @supports (-webkit-appearance:none) {
+    .mjx-math {
+      vertical-align: 0.8px;
+    }
+    .MathJax_ref {
+      vertical-align: 2px;
+    }
+  }
 
 
 
